Fix vertical spacing

--- a/style.css
+++ b/style.css
@@ -110,6 +110,12 @@ html {
 #informationBox #infoIcon {
     color: #9b1e1e; /*#c7b93a*/
 }
+#informationBox div:first-of-type {
+    margin-bottom: 0.5rem;
+}
+#informationBox div:nth-of-type(2) {
+    margin-bottom: 2.5rem;
+}
 #informationBoxImages {
     display: flex;
     justify-content: center;
